--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+/* Coded By: JEFFREY TUASON */
+
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap");
 *, ::before, ::after {
   box-sizing: border-box;
@@ -26,12 +28,6 @@ img {
   transition: all 0.2s ease;
 }
 
-/* (work) */
-/* (play) */
-/* (study) */
-/* (exercise) */
-/* (social) */
-/* (self care) */
 .profile {
   background-color: hsl(235deg, 46%, 20%);
   border-radius: 1rem;
